--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <html>
 
 <head>
-
+<link
+href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootst
+rap.min.css" rel="stylesheet">
+  
 <title>Dundee Pub</title>
   
 </head>
