--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
 href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootst
 rap.min.css" rel="stylesheet">
   
-<title>Dundee Pub</title>
+<title>Dundee FC Supporters Bus</title>
   
 </head>
 
 <body>
 
-<h1>Dundee Pub</h1>
-
-  <h2> hello welcome to Dundee Pub </h2>
+<h1>Dundee FC Supporters Bus</h1>
   
- <p> This pub is loacated in the nicest part of dundee... Douglas </p>
+ <p> Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
   
 </body>
   
