--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@ rap.min.css" rel="stylesheet">
 
 <body>
 
-<h1>Dundee FC Supporters Bus</h1>
-  
- <p> Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
+  <div><h1>Dundee FC Supporters Bus</h1></div>
+
+  <div><p> Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p></div>
+ 
   
 </body>
   
