--- a/index.html
+++ b/index.html
@@ -16,7 +16,30 @@ rap.min.css" rel="stylesheet">
   <div><h1>Dundee FC Supporters Bus</h1></div>
 
   <div><p> Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p></div>
- 
+
+  <div class="container text-center">
+  <div class="row justify-content-md-center">
+    <div class="col col-lg-2">
+      1 of 3
+    </div>
+    <div class="col-md-auto">
+      Variable width content
+    </div>
+    <div class="col col-lg-2">
+      3 of 3
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col-md-auto">
+      Variable width content
+    </div>
+    <div class="col col-lg-2">
+      3 of 3
+    </div>
+  </div>
   
 </body>
   
