--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@ rap.min.css" rel="stylesheet">
       <div class="col-12">
         <p> Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
       </div>
+      <div class="col-6">
+
+        <p> Dundee FC Fixtures </p>
+        
+      </div>
+
+      <div class="col-6">
+
+        <p> Games that will have buses running </p>
+
+      </div>
+
+    </div>
   
 </body>
   
