--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ rap.min.css" rel="stylesheet">
       <div class="col-6">
 
         <p> Dundee FC Fixtures </p>
+
+        <ul>
+          <li>Rangers(H) - 17:30, Sat 29th March</li>
+        </ul>
         
       </div>
 
