--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ rap.min.css" rel="stylesheet">
 
         <ul>
           <li>Rangers(H) - 17:30, Sat 29th March</li>
+          <li>St. Mirren(H) - 15:00, Sat 5th April</li>
+          <li>Hibernian(A) - 14:30, Sun 13th April</li>
+          <p>Split still to be announced</p>
         </ul>
         
       </div>
