--- a/index.html
+++ b/index.html
@@ -20,23 +20,41 @@ rap.min.css" rel="stylesheet">
       <div class="col-12">
         <p> Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
       </div>
-      <div class="col-6">
+      <p> Dundee FC Fixtures </p>
+      <div class="col-12">
 
-        <p> Dundee FC Fixtures </p>
-
-        <ul>
-          <li>Rangers(H) - 17:30, Sat 29th March</li>
-          <li>St. Mirren(H) - 15:00, Sat 5th April</li>
-          <li>Hibernian(A) - 14:30, Sun 13th April</li>
+        <div class="col-12">
+           <div class="row">
+          <div class="col-6">
+          Rangers(H) - 17:30, Sat 29th March
+            <div class="col-6">
+              <div class="col">
+               departing from Montrose - 16:00
+              </div>
+              <div class="col">
+               departing from Arbroath - 16:20
+              </div>
+              <div class="col">
+                depating from Carnoustie - 16:45
+                </div>
+            </div>
+            </div>
+             </div>
+          </div>
+          <p>St. Mirren(H) - 15:00, Sat 5th April</p>
+          <p>Hibernian(A) - 14:30, Sun 13th April</p>
           <p>Split still to be announced</p>
-        </ul>
+
         
       </div>
 
       <div class="col-6">
 
-        <p> Games that will have buses running </p>
+        <p> What Time the buses will running </p>
 
+        <ul>
+          <li>Rangers(H) - </li>
+        </ul>
       </div>
 
     </div>
