--- a/index.html
+++ b/index.html
@@ -23,25 +23,42 @@ rap.min.css" rel="stylesheet">
       <p> Dundee FC Fixtures </p>
       <div class="col-12">
 
-        <div class="col-12">
-           <div class="row">
+           
           <div class="col-12">
           Rangers(H) - 17:30, Sat 29th March
-
+            <div class="row">
               <div class="col-6">
-               departing from Montrose - 16:00
+               location
               </div>
               <div class="col-6">
-               departing from Arbroath - 16:20
+               Arbroath
               </div>
               <div class="col-6">
-                depating from Carnoustie - 16:45
+                Carnoustie
                 </div>
             </div>
+            <div class ="row">
+              <div class="col-6">
+               Departure Time
+              </div>
+              <div class="col-6">
+               16:20
+              </div>
+              <div class="col-6">
+                16:45
+                </div>
             </div>
-          </div>
+            <div class ="row">
+              <div class="col-6">
+               Arrival Time
+              </div>
+              <div class="col-6">
+               16:40
+              </div>
+              <div class="col-6">
+                17:10
+                </div>
 
-        
       </div>
 
 
