--- a/index.html
+++ b/index.html
@@ -27,35 +27,35 @@ rap.min.css" rel="stylesheet">
           <div class="col-12">
           Rangers(H) - 17:30, Sat 29th March
             <div class="row">
-              <div class="col-6">
+              <div class="col">
                location
               </div>
-              <div class="col-6">
+              <div class="col">
                Arbroath
               </div>
-              <div class="col-6">
+              <div class="col">
                 Carnoustie
                 </div>
             </div>
             <div class ="row">
-              <div class="col-6">
+              <div class="col">
                Departure Time
               </div>
-              <div class="col-6">
+              <div class="col">
                16:20
               </div>
-              <div class="col-6">
+              <div class="col">
                 16:45
                 </div>
             </div>
             <div class ="row">
-              <div class="col-6">
+              <div class="col">
                Arrival Time
               </div>
-              <div class="col-6">
+              <div class="col">
                16:40
               </div>
-              <div class="col-6">
+              <div class="col">
                 17:10
                 </div>
 
