--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ rap.min.css" rel="stylesheet">
            
           <div class="col-12">
           Rangers(H) - 17:30, Sat 29th March
+            <div class="col-6">
             <div class="row">
               <div class="col">
                location
@@ -58,7 +59,7 @@ rap.min.css" rel="stylesheet">
               <div class="col">
                 17:10
                 </div>
-
+            </div>
       </div>
 
 
