--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ rap.min.css" rel="stylesheet">
                 </div>
             </div>
       </div>
+            <div class="col-6">
+              <img src="routetodens.png>
+                </div>
 
 
     </div>
