--- a/index.html
+++ b/index.html
@@ -28,35 +28,38 @@ rap.min.css" rel="stylesheet">
           Rangers(H) - 17:30, Sat 29th March
             <div class="col-6">
             <div class="row">
-              <div class="col">
+              <div class="col-3">
                location
               </div>
-              <div class="col">
+              <div class="col-3">
                Arbroath
               </div>
-              <div class="col">
+              <div class="col-3">
                 Carnoustie
+                </div>
+              <div class="col-3>
+                Dens Park
                 </div>
             </div>
             <div class ="row">
-              <div class="col">
+              <div class="col-3">
                Departure Time
               </div>
               <div class="col">
                16:20
               </div>
-              <div class="col">
+              <div class="col-3">
                 16:45
                 </div>
             </div>
             <div class ="row">
-              <div class="col">
+              <div class="col-3">
                Arrival Time
               </div>
-              <div class="col">
+              <div class="col-3">
                16:40
               </div>
-              <div class="col">
+              <div class="col-3">
                 17:10
                 </div>
             </div>
