--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ rap.min.css" rel="stylesheet">
               <div class="col-3">
                Departure Time
               </div>
-              <div class="col">
+              <div class="col-3">
                16:20
               </div>
               <div class="col-3">
