--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ rap.min.css" rel="stylesheet">
             </div>
       </div>
             <div class="col-6">
-              <img src="routetodens.png>
+              <img src="routetodens.png" height>
                 </div>
 
 
