--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ rap.min.css" rel="stylesheet">
   
 </head>
 
-<body class="bg-primary text-white">
+<body class="bg-white text-white">
 
   <div class="bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
 
