--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ rap.min.css" rel="stylesheet">
   <div class="container text-center">
     <div class="row">
       <div class="col-12">
-        <p> Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
+         Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. 
       </div>
       <p> Dundee FC Fixtures </p>
       <div class="col-12">
