--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ rap.min.css" rel="stylesheet">
 
 <body class="bg-white text-white">
 
-  <div class="bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
+  <div class="bg-primary text-white container text-center"><h1>Dundee FC Supporters Bus</h1></div>
 
   <div class="container text-center">
     <div class="row">
