--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ rap.min.css" rel="stylesheet">
 
           Rangers(H) - 17:30, Sat 29th March
               <div class="col-6">
-                <img src="routetodens.png" class="rounded float-right" alt="...">
+                <img src="routetodens.png" class="img-thumbnail" alt="...">
               </div>
             <div class="col-6">
                
