--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ rap.min.css" rel="stylesheet">
             </div>
       </div>
 
+            <div class="col-6><img src="picture-1.png" class="img-fluid" alt="Responsive image"></div>
 
 
     </div>
