--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ rap.min.css" rel="stylesheet">
           <div class="col-12 bg-primary text-white">
 
           Rangers(H) - 17:30, Sat 29th March
-              
+          </div>
+        <div class="col-12 bg-primary text-white">
             <div class="col-6">
                
             <div class="row">
@@ -106,7 +107,7 @@ rap.min.css" rel="stylesheet">
 
             <div class="col-6><img src="picture-1.png" class="img-fluid" alt="Responsive image"></div>
 
-
+        </div>
     </div>
   
 </body>
