--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@ rap.min.css" rel="stylesheet">
 <body class="bg-white text-white">
 
   
-
+<div class="container text-center">
 <nav class="navbar navbar-expand-lg navbar-light bg-primary text-white">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="https://loganross07.github.io/web-coursework/>Home</a>
+  <a class="navbar-brand" href="https://loganross07.github.io/web-coursework/">Price</a>
+  <a class="navbar-brand" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
  
 </nav>
 
 <div class="col-10 bg-primary text-white container text-center"><h1>Dundee FC Supporters Bus</h1></div>
   
-  <div class="container text-center">
+  
     <div class="row">
       <div class="col-12">
          Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. 
