--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ rap.min.css" rel="stylesheet">
   
 </head>
 
-<body class="bg-white text-white">
+<body>
 
   
 <div class="container text-center">
