--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ rap.min.css" rel="stylesheet">
   
     <div class="row">
       <div class="col-12">
-         Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. 
+       <p>  Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
       </div>
       <p> Dundee FC Fixtures </p>
       <div class="col-12">
