--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ rap.min.css" rel="stylesheet">
  
 </nav>
 
-<div class="col-10 bg-primary text-white container text-center"><h1>Dundee FC Supporters Bus</h1></div>
+<div class="col-10 bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
   
   
     <div class="row">
