--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ rap.min.css" rel="stylesheet">
   <a class="navbar-brand" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
  
 </nav>
-
+<div></div>
 <div class="col-10 bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
   
   
@@ -29,7 +29,6 @@ rap.min.css" rel="stylesheet">
       <div class="col-12">
        <p>  Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
       </div>
-      <p> Dundee FC Fixtures </p>
       <div class="col-12">
 
            
