--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ rap.min.css" rel="stylesheet">
 <body>
 
   
-<div class="container text-center">
-<nav class="navbar navbar-expand-lg navbar-light bg-primary text-white">
+<div class="container text-center bg-primary text-white">
+<nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="https://loganross07.github.io/web-coursework/>Home</a>
   <a class="navbar-brand" href="https://loganross07.github.io/web-coursework/">Price</a>
   <a class="navbar-brand" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
@@ -79,7 +79,8 @@ rap.min.css" rel="stylesheet">
 
         </div>
     </div>
-  
+    </div>
+</div>
 </body>
   
 </html>
