--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ rap.min.css" rel="stylesheet">
   <a class="navbar-brand" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
  
 </nav>
-<div class="col-12"></div>
+<div class="col-12 bg-white"></div>
 <div class="col-12 bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
   
   
