--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ rap.min.css" rel="stylesheet">
  
 </nav>
 <div class="col-12 bg-white"> </div>
+  <div class="row">
 <div class="col-12 bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
-  
+  </div>
   
     <div class="row">
       <div class="col-12">
