--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ rap.min.css" rel="stylesheet">
   <a class="navbar-brand" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
  
 </nav>
-<div class="col-12 bg-white"> </div>
-  <div class="row">
+<div class="col-12 bg-white pt-3"> </div>
+
 <div class="col-12 bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
-  </div>
+
   
     <div class="row">
       <div class="col-12">
