--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ rap.min.css" rel="stylesheet">
   <a class="col navbar-brand" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
  
 </nav>
-<div class="col-12 bg-white pt-3"> </div>
+<div class="container bg-white pt-3"> </div>
 
 <div class="col-12 bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
 
