--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ rap.min.css" rel="stylesheet">
       <div class="col-12">
        <p>  Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
       </div>
-      <div class="col-12">
+      <div class="col-12 pt-3 pb-3">
 
            
           <div class="col-12 bg-primary text-white">
