--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ rap.min.css" rel="stylesheet">
 
 <div class="col-12 bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
 
-  
+  <div class="col-12 bg-white pt-3"> </div>
     <div class="row">
       <div class="col-12">
        <p>  Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
