--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@ rap.min.css" rel="stylesheet">
   <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
  
 </nav>
-<div class="col-12 bg-white p-3"> </div>
+<div class="col-12 bg-white pt-3"> </div>
 
 <div class="col-12 bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
 
-  <div class="col-12 bg-white p-3"> </div>
+  <div class="col-12 bg-white pt-3"> </div>
     <div class="row">
       <div class="col-12">
        <p>  Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
       </div>
-      <div class="col-12 p-3">
+      <div class="col-12 pt-3 pb-3">
 
            
           <div class="col-12 bg-primary text-white">
