--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ rap.min.css" rel="stylesheet">
             </div>
       </div>
 
-            <div><img src="picture-1.png" class="img-fluid" alt="Responsive image"></div>
+            <div class="col-6><img src="picture-1.png" class="img-fluid" alt="Responsive image"></div>
 
         </div>
     </div>
