--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ rap.min.css" rel="stylesheet">
 
           Rangers(H) - 17:30, Sat 29th March
           </div>
-        <div class="col-12 bg-primary text-white">
+  
             <div class="col-6">
                
             <div class="row">
@@ -74,9 +74,10 @@ rap.min.css" rel="stylesheet">
                 17:10
                 </div>
             </div>
-      </div>
 
-            <div class="col-6><img src="picture-1.png" class="img-fluid" alt="Responsive image"></div>
+            <div class="col-6>
+              <img src="picture-1.png" class="img-fluid" alt="Responsive image">
+            </div>
 
         </div>
     </div>
