--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ rap.min.css" rel="stylesheet">
             </div>
 
             <div class="col-6>
-              <img src="picture-1.png" class="img-fluid" alt="Responsive image">
+              <img src="carnoustiedees.jpg" class="img-fluid" alt="Responsive image">
             </div>
             </div>
         </div>
