--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ rap.min.css" rel="stylesheet">
             </div>
             <div class ="row bg-primary text-white">
               <div class="col bg-primary text-white">
-               Departure Time
+               Departure
               </div>
               <div class="col bg-primary text-white">
                16:20
@@ -65,7 +65,7 @@ rap.min.css" rel="stylesheet">
             </div>
             <div class ="row bg-primary text-white">
               <div class="col bg-primary text-white">
-               Arrival Time
+               Arrival
               </div>
               <div class="col bg-primary text-white">
                16:40
