--- a/index.html
+++ b/index.html
@@ -74,7 +74,44 @@ rap.min.css" rel="stylesheet">
                 17:10
                 </div>
             </div>
+              <div class="col-12 bg-primary text-white">
 
+          St. Mirren(H) - 15:00, Sat 5th April
+          </div>
+               <div class="row">
+             
+              <div class="col bg-primary text-white">
+               location
+              </div>
+              <div class="col bg-primary text-white">
+               Arbroath
+              </div>
+              <div class="col bg-primary text-white">
+                Carnoustie
+                </div>
+            </div>
+            <div class ="row bg-primary text-white">
+              <div class="col bg-primary text-white">
+               Departure
+              </div>
+              <div class="col bg-primary text-white">
+               13:50
+              </div>
+              <div class="col bg-primary text-white">
+                14:15
+                </div>
+            </div>
+            <div class ="row bg-primary text-white">
+              <div class="col bg-primary text-white">
+               Arrival
+              </div>
+              <div class="col bg-primary text-white">
+               14:10
+              </div>
+              <div class="col bg-primary text-white">
+                14:40
+                </div>
+            </div>
             <div class="col-6>
               <img src="carnoustiedees.jpg" class="img-thumbnail" alt="Responsive image">
             </div>
