--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ rap.min.css" rel="stylesheet">
                 17:10
                 </div>
             </div>
-              <div class="col-12 bg-primary text-white">
+              <div class="col-12 bg-primary text-white container text-center">
 
           St. Mirren(H) - 15:00, Sat 5th April
           </div>
@@ -112,7 +112,7 @@ rap.min.css" rel="stylesheet">
                 14:40
                 </div>
             </div>
-               <div class="col-12 bg-primary text-white">
+               <div class="col-12 bg-primary text-white container text-center">
 
           Hibernian(A) - 14:30, Sun 13th April
           </div>
