--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ rap.min.css" rel="stylesheet">
 </nav>
 <div class="col-12 bg-white pt-3"> </div>
 
-<div class="col-12 bg-primary text-white"><h1>Dundee FC Supporters Bus</h1></div>
+<div class="col-6 bg-primary text-white">
+  <h1>Dundee FC Supporters Bus</h1>
+</div>
+  <div class="col-6">
+    <img src = "logo.jpg" class = "img-thumbnail" alt = "logo">
 
   <div class="col-12 bg-white pt-3"> </div>
     <div class="row">
