--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ rap.min.css" rel="stylesheet">
 </div>
   <div class="col-6">
     <img src = "logo.jpg" class = "img-thumbnail" alt = "logo">
-
+  </div>
   <div class="col-12 bg-white pt-3"> </div>
     <div class="row">
       <div class="col-12">
