--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@ rap.min.css" rel="stylesheet">
 </nav>
 <div class="col-12 bg-white pt-3"> </div>
 
+  <div class = "row">
 <div class="col-6 bg-primary text-white">
   <h1>Dundee FC Supporters Bus</h1>
 </div>
   <div class="col-6">
     <img src = "logo.jpg" class = "rounded float-right" height = "100px" width = "100px" alt = "logo">
+  </div>
   </div>
   <div class="col-12 bg-white pt-3"> </div>
     <div class="row">
