--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ rap.min.css" rel="stylesheet">
   <h1>Dundee FC Supporters Bus</h1>
 </div>
   <div class="col-6">
-    <img src = "logo.jpg" class = "rounded float-right" height = "100px" width = "100px" alt = "logo">
+    <img src = "logo.jpg" class = "img-fluid" alt = "logo">
   </div>
   </div>
   <div class="col-12 bg-white pt-3"> </div>
