--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ rap.min.css" rel="stylesheet">
   
 <div class="container text-center bg-primary text-white">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="col-2 navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Home</a>
-  <a class="col-2 navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Price</a>
-  <a class="col-2 navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
+  <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Home</a>
+  <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Price</a>
+  <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
  
 </nav>
 <div class="col-12 bg-white pt-3"> </div>
