--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ rap.min.css" rel="stylesheet">
   
 <div class="container text-center bg-primary text-white">
 <nav class="navbar navbar-expand-lg navbar-light">
+  <img src = "logo.jpg" class = "img-fluid col" alt = "logo">
   <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Home</a>
   <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Price</a>
   <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
@@ -24,12 +25,9 @@ rap.min.css" rel="stylesheet">
 <div class="col-12 bg-white pt-3"> </div>
 
   <div class = "row">
-<div class="col-6 bg-primary text-white">
+<div class="col-12 bg-primary text-white">
   <h1>Dundee FC Supporters Bus</h1>
 </div>
-  <div class="col-6">
-    <img src = "logo.jpg" class = "img-fluid" alt = "logo">
-  </div>
   </div>
   <div class="col-12 bg-white pt-3"> </div>
     <div class="row">
