--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ rap.min.css" rel="stylesheet">
   
 <div class="container text-center bg-primary text-white">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <img src = "logo.jpg" class = "img-fluid col" alt = "logo">
+  <img src="logo.jpg" class="img-fluid" alt="Responsive image">
   <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Home</a>
   <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Price</a>
   <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
