--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@ rap.min.css" rel="stylesheet">
                 </div>
             </div>
             </div>
+          <div class="row">
           <div class="col-6"><img src="Screenshot 2025-03-27 112818" class="img-fluid" alt="Responsive image"></div>
+          </div>
               <div class="col-12 bg-primary text-white container text-center">
 
           St. Mirren(H) - 15:00, Sat 5th April
