--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ rap.min.css" rel="stylesheet">
                 </div>
             </div>
             </div>
-          <div class="row">
-          <div class="col-6"><img src="Screenshot 2025-03-27 112818" class="img-fluid" alt="Responsive image"></div>
-          </div>
+
+          <div class="col-6"><img src="rangersbadge" class="img-fluid" alt="Rangers Badge"></div>
+
               <div class="col-12 bg-primary text-white container text-center">
 
           St. Mirren(H) - 15:00, Sat 5th April
@@ -122,6 +122,7 @@ rap.min.css" rel="stylesheet">
                 </div>
             </div>
               </div>
+          <div class="col-6"><img src="saintsbadge" class="img-fluid" alt="St. Mirren Badge"></div>
                <div class="col-12 bg-primary text-white container text-center">
 
           Hibernian(A) - 14:30, Sun 13th April
@@ -162,6 +163,7 @@ rap.min.css" rel="stylesheet">
                 </div>
             </div>
            </div>
+          <div class="col-6"><img src="hibsbadge" class="img-fluid" alt="Hibernian Badge"></div>
             <div class="col-6>
               <img src="carnoustiedees.jpg" class="img-thumbnail" alt="Responsive image">
             </div>
