--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ rap.min.css" rel="stylesheet">
 
                
             <div class="row">
-             
-              <p class="col bg-primary text-white">location</p>
-              <p class="col bg-primary text-white">Arbroath</p>
-              <p class="col bg-primary text-white">Carnoustie</p>
+              <p class="col-4 bg-primary text-white">location</p>
+              <p class="col-4 bg-primary text-white">Arbroath</p>
+              <p class="col-4 bg-primary text-white">Carnoustie</p>
+              <img src="rangersbadge" class="img-fluid col-4" alt="Rangers Badge">
             </div>
             <div class ="row bg-primary text-white">
               <div class="col bg-primary text-white">
