--- a/index.html
+++ b/index.html
@@ -47,23 +47,13 @@ rap.min.css" rel="stylesheet">
               <img src="rangersbadge" class="img-fluid col-4" alt="Rangers Badge">
             </div>
             <div class ="row bg-primary text-white">
-              <div class="col bg-primary text-white">
-               Departure
-              </div>
-              <div class="col bg-primary text-white">
-               16:20
-              </div>
-              <div class="col bg-primary text-white">
-                16:45
-                </div>
+              <p class="col bg-primary text-white">Departure</p>
+              <p class="col bg-primary text-white">16:20</p>
+              <p class="col bg-primary text-white">16:45</p>
             </div>
             <div class ="row bg-primary text-white">
-              <div class="col bg-primary text-white">
-               Arrival
-              </div>
-              <div class="col bg-primary text-white">
-               16:40
-              </div>
+              <p class="col bg-primary text-white">Arrival</p>
+              <p class="col bg-primary text-white">16:40</p>
               <div class="col bg-primary text-white">
                 17:10
                 </div>
