--- a/index.html
+++ b/index.html
@@ -41,23 +41,20 @@ rap.min.css" rel="stylesheet">
 
                
             <div class="row">
-              <p class="col-4 bg-primary text-white">location</p>
-              <p class="col-4 bg-primary text-white">Arbroath</p>
-              <p class="col-4 bg-primary text-white">Carnoustie</p>
-              <img src="rangersbadge" class="img-fluid col-4" alt="Rangers Badge">
+              <p class="col-3 bg-primary text-white">location</p>
+              <p class="col-3 bg-primary text-white">Arbroath</p>
+              <p class="col-3 bg-primary text-white">Carnoustie</p>
+              <div class="col-3"><img src="rangersbadge.png" class="img-fluid" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
-              <p class="col bg-primary text-white">Departure</p>
-              <p class="col bg-primary text-white">16:20</p>
-              <p class="col bg-primary text-white">16:45</p>
+              <p class="col-3 bg-primary text-white">Departure</p>
+              <p class="col-3 bg-primary text-white">16:20</p>
+              <p class="col-3 bg-primary text-white">16:45</p>
             </div>
             <div class ="row bg-primary text-white">
-              <p class="col bg-primary text-white">Arrival</p>
-              <p class="col bg-primary text-white">16:40</p>
-              <div class="col bg-primary text-white">
-                17:10
-                </div>
-              <div class="col-6"><img src="rangersbadge" class="img-fluid" alt="Rangers Badge"></div>
+              <p class="col-3 bg-primary text-white">Arrival</p>
+              <p class="col-3 bg-primary text-white">16:40</p>
+              <p class="col-3 bg-primary text-white">17:10</p>
             </div>
               
             </div>
