--- a/index.html
+++ b/index.html
@@ -65,85 +65,41 @@ rap.min.css" rel="stylesheet">
 
           St. Mirren(H) - 15:00, Sat 5th April
           </div>
-            <div class="col-6">
-               <div class="row">
-             
-              <div class="col bg-primary text-white">
-               location
-              </div>
-              <div class="col bg-primary text-white">
-               Arbroath
-              </div>
-              <div class="col bg-primary text-white">
-                Carnoustie
-                </div>
+                  <div class="row">
+              <p class="col-3 bg-primary text-white">location</p>
+              <p class="col-3 bg-primary text-white">Arbroath</p>
+              <p class="col-3 bg-primary text-white">Carnoustie</p>
+              <div class="col-3"><img src="rangersbadge.png" class="img-fluid" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
-              <div class="col bg-primary text-white">
-               Departure
-              </div>
-              <div class="col bg-primary text-white">
-               13:50
-              </div>
-              <div class="col bg-primary text-white">
-                14:15
-                </div>
+              <p class="col-3 bg-primary text-white">Departure</p>
+              <p class="col-3 bg-primary text-white">16:20</p>
+              <p class="col-3 bg-primary text-white">16:45</p>
             </div>
             <div class ="row bg-primary text-white">
-              <div class="col bg-primary text-white">
-               Arrival
-              </div>
-              <div class="col bg-primary text-white">
-               14:10
-              </div>
-              <div class="col bg-primary text-white">
-                14:40
-                </div>
+              <p class="col-3 bg-primary text-white">Arrival</p>
+              <p class="col-3 bg-primary text-white">16:40</p>
+              <p class="col-3 bg-primary text-white">17:10</p>
             </div>
-              </div>
-          <div class="col-6"><img src="saintsbadge" class="img-fluid" alt="St. Mirren Badge"></div>
-               <div class="col-12 bg-primary text-white container text-center">
-
+      <div class="col-12 bg-primary text-white container text-center">
           Hibernian(A) - 14:30, Sun 13th April
           </div>
-           <div class="col-6">
-               <div class="row">
-             
-              <div class="col bg-primary text-white">
-               location
-              </div>
-              <div class="col bg-primary text-white">
-               Arbroath
-              </div>
-              <div class="col bg-primary text-white">
-                Carnoustie
-                </div>
+                 <div class="row">
+              <p class="col-3 bg-primary text-white">location</p>
+              <p class="col-3 bg-primary text-white">Arbroath</p>
+              <p class="col-3 bg-primary text-white">Carnoustie</p>
+              <div class="col-3"><img src="rangersbadge.png" class="img-fluid" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
-              <div class="col bg-primary text-white">
-               Departure
-              </div>
-              <div class="col bg-primary text-white">
-               13:20
-              </div>
-              <div class="col bg-primary text-white">
-                13:45
-                </div>
+              <p class="col-3 bg-primary text-white">Departure</p>
+              <p class="col-3 bg-primary text-white">16:20</p>
+              <p class="col-3 bg-primary text-white">16:45</p>
             </div>
             <div class ="row bg-primary text-white">
-              <div class="col bg-primary text-white">
-               Arrival
-              </div>
-              <div class="col bg-primary text-white">
-               13:40
-              </div>
-              <div class="col bg-primary text-white">
-                14:10
-                </div>
+              <p class="col-3 bg-primary text-white">Arrival</p>
+              <p class="col-3 bg-primary text-white">16:40</p>
+              <p class="col-3 bg-primary text-white">17:10</p>
             </div>
-           </div>
-          <div class="col-6"><img src="hibsbadge" class="img-fluid" alt="Hibernian Badge"></div>
-            <div class="col-6>
               <img src="carnoustiedees.jpg" class="img-thumbnail" alt="Responsive image">
             </div>
             </div>
