--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@ rap.min.css" rel="stylesheet">
               <p class="col-3 bg-primary text-white">Carnoustie</p>
               <div class="col-3"><img src="rangersbadge.png" class="img-fluid" alt="Rangers Badge"></div>
             </div>
-            <div class ="row bg-primary text-white">
+            <div class ="row bg-primary text-white col-12">
               <p class="col-3 bg-primary text-white">Departure</p>
               <p class="col-3 bg-primary text-white">16:20</p>
               <p class="col-3 bg-primary text-white">16:45</p>
             </div>
-            <div class ="row bg-primary text-white">
+            <div class ="row bg-primary text-white col-12">
               <p class="col-3 bg-primary text-white">Arrival</p>
               <p class="col-3 bg-primary text-white">16:40</p>
               <p class="col-3 bg-primary text-white">17:10</p>
