--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-3 bg-primary text-white">location</p>
               <p class="col-3 bg-primary text-white">Arbroath</p>
               <p class="col-3 bg-primary text-white">Carnoustie</p>
-              <div class="col-3"><img src="rangersbadge.png" class="img-fluid" alt="Rangers Badge"></div>
+              <div class="col-3"><img src="rangersbadge.png" class="img-thumbnail" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
               <p class="col-3 bg-primary text-white">Departure</p>
