--- a/index.html
+++ b/index.html
@@ -42,20 +42,21 @@ rap.min.css" rel="stylesheet">
 
                
             <div class="row">
-              <p class="col-3 bg-primary text-white">location</p>
-              <p class="col-3 bg-primary text-white">Arbroath</p>
-              <p class="col-3 bg-primary text-white">Carnoustie</p>
-              <div class="col-3"><img src="hibsbadge.png" class="img-thumbnail" alt="Rangers Badge"></div>
+              <p class="col-2 bg-primary text-white">location</p>
+              <p class="col-2 bg-primary text-white">Arbroath</p>
+              <p class="col-2 bg-primary text-white">Carnoustie</p>
+              <p class="col-5"></p>
+              <div class="col-1"><img src="hibsbadge.png" class="img-thumbnail" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
-              <p class="col-3 bg-primary text-white">Departure</p>
-              <p class="col-3 bg-primary text-white">16:20</p>
-              <p class="col-3 bg-primary text-white">16:45</p>
+              <p class="col-2 bg-primary text-white">Departure</p>
+              <p class="col-2 bg-primary text-white">16:20</p>
+              <p class="col-2 bg-primary text-white">16:45</p>
             </div>
             <div class ="row bg-primary text-white">
-              <p class="col-3 bg-primary text-white">Arrival</p>
-              <p class="col-3 bg-primary text-white">16:40</p>
-              <p class="col-3 bg-primary text-white">17:10</p>
+              <p class="col-2 bg-primary text-white">Arrival</p>
+              <p class="col-2 bg-primary text-white">16:40</p>
+              <p class="col-2 bg-primary text-white">17:10</p>
             </div>
               
 
@@ -66,39 +67,41 @@ rap.min.css" rel="stylesheet">
           St. Mirren(H) - 15:00, Sat 5th April
           </div>
                   <div class="row">
-              <p class="col-3 bg-primary text-white">location</p>
-              <p class="col-3 bg-primary text-white">Arbroath</p>
-              <p class="col-3 bg-primary text-white">Carnoustie</p>
-              <div class="col-3"><img src="rangersbadge.png" class="img-fluid" alt="Rangers Badge"></div>
+              <p class="col-2 bg-primary text-white">location</p>
+              <p class="col-2 bg-primary text-white">Arbroath</p>
+              <p class="col-2 bg-primary text-white">Carnoustie</p>
+              <p class="col-5"></p>
+              <div class="col-1"><img src="rangersbadge.png" class="img-fluid" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white col-12">
-              <p class="col-3 bg-primary text-white">Departure</p>
-              <p class="col-3 bg-primary text-white">16:20</p>
-              <p class="col-3 bg-primary text-white">16:45</p>
+              <p class="col-2 bg-primary text-white">Departure</p>
+              <p class="col-2 bg-primary text-white">16:20</p>
+              <p class="col-2 bg-primary text-white">16:45</p>
             </div>
             <div class ="row bg-primary text-white col-12">
-              <p class="col-3 bg-primary text-white">Arrival</p>
-              <p class="col-3 bg-primary text-white">16:40</p>
-              <p class="col-3 bg-primary text-white">17:10</p>
+              <p class="col-2 bg-primary text-white">Arrival</p>
+              <p class="col-2 bg-primary text-white">16:40</p>
+              <p class="col-2 bg-primary text-white">17:10</p>
             </div>
       <div class="col-12 bg-primary text-white">
           Hibernian(A) - 14:30, Sun 13th April
           </div>
                  <div class="row">
-              <p class="col-3 bg-primary text-white">location</p>
-              <p class="col-3 bg-primary text-white">Arbroath</p>
-              <p class="col-3 bg-primary text-white">Carnoustie</p>
-              <div class="col-3"><img src="saintsbadge.png" class="img-fluid" alt="Rangers Badge"></div>
+              <p class="col-2 bg-primary text-white">location</p>
+              <p class="col-2 bg-primary text-white">Arbroath</p>
+              <p class="col-2 bg-primary text-white">Carnoustie</p>
+              <p class="col-5"></p>
+              <div class="col-1"><img src="saintsbadge.png" class="img-fluid" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
-              <p class="col-3 bg-primary text-white">Departure</p>
-              <p class="col-3 bg-primary text-white">16:20</p>
-              <p class="col-3 bg-primary text-white">16:45</p>
+              <p class="col-2 bg-primary text-white">Departure</p>
+              <p class="col-2 bg-primary text-white">16:20</p>
+              <p class="col-2 bg-primary text-white">16:45</p>
             </div>
             <div class ="row bg-primary text-white">
-              <p class="col-3 bg-primary text-white">Arrival</p>
-              <p class="col-3 bg-primary text-white">16:40</p>
-              <p class="col-3 bg-primary text-white">17:10</p>
+              <p class="col-2 bg-primary text-white">Arrival</p>
+              <p class="col-2 bg-primary text-white">16:40</p>
+              <p class="col-2 bg-primary text-white">17:10</p>
             </div>
               <img src="carnoustiedees.jpg" class="img-thumbnail" alt="Responsive image">
         </div>
