--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">16:40</p>
               <p class="col-2 bg-primary text-white">17:10</p>
             </div>
-              <img src="carnoustiedees.jpg" class="img-thumbnail" alt="Responsive image">
+        <div class="row">
+          <img src="carnoustiedees.jpg" class="img-thumbnail col-3" alt="Responsive image">
+          <img src="carnoustie.jpg" class="img-thumbnail col-3" alt="Responsive image">
+          <img src="dundee.jpg" class="img-thumbnail col-3" alt="Responsive image">
+        </div>
+          
         </div>
   </div>
 
