--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ rap.min.css" rel="stylesheet">
        <p>  Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
       </div>
       <div class="col-12 pt-3 pb-3">
-        <div class="row">
+        <div class="row pt-2">
           <p>Rangers(H) - 17:30, Sat 29th March</p>
         </div>
 
@@ -62,7 +62,7 @@ rap.min.css" rel="stylesheet">
 
           
 
-          <div class="col-12 bg-primary">
+          <div class="row pt-2">
 
           St. Mirren(H) - 15:00, Sat 5th April
           </div>
@@ -83,7 +83,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">16:40</p>
               <p class="col-2 bg-primary text-white">17:10</p>
             </div>
-      <div class="col-12 bg-primary text-white">
+      <div class="row pt-2">
           Hibernian(A) - 14:30, Sun 13th April
           </div>
                  <div class="row">
