--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">17:10</p>
             </div>
         <div class="row">
-          <img src="carnoustiedees.jpg" class="img-thumbnail col-3" alt="Responsive image">
-          <img src="carnoustie.jpg" class="img-thumbnail col-3" alt="Responsive image">
-          <img src="dundee.jpg" class="img-thumbnail col-3" alt="Responsive image">
+          <img src="carnoustiedees.jpg" class="img-thumbnail col-3 pt-1" alt="Responsive image">
+          <img src="carnoustie.jpg" class="img-thumbnail col-3 pt-1" alt="Responsive image">
+          <img src="dundee.jpg" class="img-thumbnail col-3 pt-1" alt="Responsive image">
         </div>
           
         </div>
