--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-3"></p>
-              <div class="col-2"><img src="hibsbadge.png" class="img-thumbnail" alt="Rangers Badge"></div>
+              <div class="col-2"><img src="hibsbadge.png" class="img-thumbnail position-absolute" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
               <p class="col-2 bg-primary text-white">Departure</p>
