--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-3"></p>
-              <div class="col-2"><img src="hibsbadge.png" class="img-thumbnail position-absolute" alt="Rangers Badge"></div>
+              <div class="col-2"><img src="hibsbadge.png" class="img-thumbnail" alt="Hibernian Badge"></div>
             </div>
-            <div class ="row bg-primary text-white">
+            <div class ="row bg-primary text-white form-check form-check-inline">
               <p class="col-2 bg-primary text-white">Departure</p>
               <p class="col-2 bg-primary text-white">16:20</p>
               <p class="col-2 bg-primary text-white">16:45</p>
             </div>
-            <div class ="row bg-primary text-white">
+            <div class ="row bg-primary text-white form-check form-check-inline">
               <p class="col-2 bg-primary text-white">Arrival</p>
               <p class="col-2 bg-primary text-white">16:40</p>
               <p class="col-2 bg-primary text-white">17:10</p>
@@ -71,7 +71,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-3"></p>
-              <div class="col-2"><img src="rangersbadge.png" class="img-fluid" alt="Rangers Badge"></div>
+              <div class="col-2"><img src="rangersbadge.png" class="img-fluid" alt="St. Mirren Badge"></div>
             </div>
             <div class ="row bg-primary text-white col-12">
               <p class="col-2 bg-primary text-white">Departure</p>
