--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ rap.min.css" rel="stylesheet">
 
           
 
-          <div class="row pt-2">
+          <div class="row pt-2 col-12">
 
           St. Mirren(H) - 15:00, Sat 5th April
           </div>
