--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ rap.min.css" rel="stylesheet">
 
           
 
-          <div class="row pt-2 col-12">
+          <div class="row">
 
           St. Mirren(H) - 15:00, Sat 5th April
           </div>
@@ -83,7 +83,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">16:40</p>
               <p class="col-2 bg-primary text-white">17:10</p>
             </div>
-      <div class="row pt-2">
+      <div class="row">
           Hibernian(A) - 14:30, Sun 13th April
           </div>
                  <div class="row">
