--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-3"></p>
-              <div class="col-2"><img src="hibsbadge.png" class="img-thumbnail form-check form-check-inline" alt="Hibernian Badge"></div>
+              <div class="col-2"><img src="rangersbadge.png" class="img-thumbnail form-check form-check-inline" alt="Hibernian Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
               <p class="col-2 bg-primary text-white">Departure</p>
@@ -71,7 +71,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-3"></p>
-              <div class="col-2"><img src="rangersbadge.png" class="img-fluid" alt="St. Mirren Badge"></div>
+              <div class="col-2"><img src="saintsbadge.png" class="img-fluid  form-check form-check-inline" alt="St. Mirren Badge"></div>
             </div>
             <div class ="row bg-primary text-white col-12">
               <p class="col-2 bg-primary text-white">Departure</p>
@@ -91,7 +91,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-3"></p>
-              <div class="col-2"><img src="saintsbadge.png" class="img-fluid" alt="Rangers Badge"></div>
+              <div class="col-2"><img src="hibsbadge.png" class="img-fluid form-check form-check-inline" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
               <p class="col-2 bg-primary text-white">Departure</p>
