--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ rap.min.css" rel="stylesheet">
 <div class="col-12 bg-white pt-3"> </div>
 
   <div class = "row">
-<div class="col-12 bg-primary text-white">
+<header class="col-12 bg-primary text-white">
   <h1>Dundee FC Supporters Bus</h1>
-</div>
+</header>
   </div>
 <div class="col-12 bg-white pt-3"> </div>
 
