--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@ rap.min.css" rel="stylesheet">
         </div>
   </div>
 
+  <footer>
+    <p>buy tickets to our next bus on our facebook page</p>
+    <a href="https://dundeefc.co.uk/tickets-dundee-support/">Buy Tickets to the next game here</p>
+  </footer>
+
 </body>
   
 </html>
