--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-3"></p>
-              <div class="col-2"><img src="saintsbadge.png" class="img-fluid  form-check form-check-inline" alt="St. Mirren Badge"></div>
+              <div class="col-2"><img src="stmirren.png" class="img-fluid  form-check form-check-inline" alt="St. Mirren Badge"></div>
             </div>
             <div class ="row bg-primary text-white col-12">
               <p class="col-2 bg-primary text-white">Departure</p>
@@ -88,7 +88,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-2"></p>
-              <div class="col-3"><img src="hibsbadge.png" class="img-fluid form-check form-check-inline" alt="Rangers Badge"></div>
+              <div class="col-3"><img src="hibs.png" class="img-fluid form-check form-check-inline" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
               <p class="col-2 bg-primary text-white">Departure</p>
