--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ rap.min.css" rel="stylesheet">
 
   <footer class="container text-center bg-primary text-white">
     <p>buy tickets to our next bus on our facebook page</p>
-    <a href="https://dundeefc.co.uk/tickets-dundee-support/">Buy Tickets to the next game here</p>
+    <a class ="text-white" href="https://dundeefc.co.uk/tickets-dundee-support/">Buy Tickets to the next game here</p>
   </footer>
 
 </body>
