--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@ rap.min.css" rel="stylesheet">
 
                
             <div class="row">
+              <div class="col-6">
               <p class="col-2 bg-primary text-white">location</p>
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
-              <p class="col-3"></p>
-              <div class="col-2"><img src="rangers.png" class="img-thumbnail form-check form-check-inline" alt="Hibernian Badge"></div>
+              </div>
+              <div class="col-6"><img src="rangers.png" class="img-thumbnail form-check form-check-inline" alt="Hibernian Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
               <p class="col-2 bg-primary text-white">Departure</p>
