--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ rap.min.css" rel="stylesheet">
 <div class="col-12 bg-white pt-3"> </div>
 
       <div class="col-12">
-       <p>  Hello, this website will allow you to view Dundee FC's next fixtures and seewhen the supporters bus is. </p>
+       <p>  Hello, this website will allow you to view Dundee FC's next fixtures. It will also allow you to find what the bus schedule is for the next game and where to buy tickets from them.</p>
       </div>
       <div class="col-12 pt-3 pb-3">
         <div class="row pt-2">
