--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ rap.min.css" rel="stylesheet">
 <div class="container text-center bg-primary text-white">
   <nav class="navbar navbar-expand-lg navbar-light">
     
-    <img src="dundee.png" class="img-fluid col-4" alt="Responsive image">
-    <a class="col-4 navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Home</a>
-    <a class="col-4 navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Price</a>
-    <a class="col-4 navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
+    <img src="logo.jpg" class="img-fluid" alt="Responsive image">
+    <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Home</a>
+    <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Price</a>
+    <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
    
   </nav>
 <div class="col-12 bg-white pt-3"> </div>
