--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ rap.min.css" rel="stylesheet">
 
           <img src="carnoustiedees.jpg" class="img-thumbnail col-3 pt-1" alt="Responsive image">
           <img src="carnoustie.jpg" class="img-thumbnail col-3 pt-1" alt="Responsive image">
-          <img src="nextgame.jpg" class="img-thumbnail col-3 pt-1" alt="Responsive image">
+          <img src="nextgame.jpg" class="img-thumbnail col-3 pt-1" height="200px" width="200px" alt="Responsive image">
 
           
         </div>
