--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ rap.min.css" rel="stylesheet">
         </div>
   </div>
 
-  <footer class="container text-center bg-primary text-white pt-3">
+  <footer class="col-12 container text-center bg-primary text-white pt-3">
     <p>buy tickets to our next bus on our facebook page</p>
     <a class ="text-white" href="https://dundeefc.co.uk/tickets-dundee-support/">Buy Tickets to the next game here</p>
   </footer>
