--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ rap.min.css" rel="stylesheet">
   <footer class="col-12 container text-center bg-primary text-white pt-3">
     <p>buy tickets to our next bus on our facebook page</p>
     <a class ="text-white" href="https://dundeefc.co.uk/tickets-dundee-support/">Buy Tickets to the next game here</p>
+      <button type="button" class="btn btn-primary">or clike this button</button>
   </footer>
 
 </body>
