--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ rap.min.css" rel="stylesheet">
 
       <div class="col-12">
        <p>  Hello, this website will allow you to view Dundee FC's next fixtures. It will also allow you to find what the bus schedule is for the next game and where to buy tickets from them.</p>
+        <p class="font-weight-bold"> Fixtures </p>
       </div>
       <div class="col-12 pt-3 pb-3">
         <div class="row pt-2">
@@ -112,7 +113,7 @@ rap.min.css" rel="stylesheet">
   <footer class="col-12 container text-center bg-primary text-white pt-3">
     <p>buy tickets to our next bus on our facebook page</p>
     <a class ="text-white" href="https://dundeefc.co.uk/tickets-dundee-support/">Buy Tickets to the next game here</p>
-      <button type="button" class="btn btn-primary">or clike this button</button>
+      <button type="button" class="btn btn-primary">or click this button</button>
   </footer>
 
 </body>
